cmake_minimum_required(VERSION 3.28)
project(AoC2024)

set(CMAKE_CXX_STANDARD 23)

add_executable(AoC2024 main.cpp
        Day1.cpp
        Day1.h
        Day2.cpp
        Day2.h
        Day3.cpp
        Day3.h
        Day4.cpp
        Day4.h
        Day5.cpp
        Day5.h
        Day6.cpp
        Day6.h
        Day7.cpp
        Day7.h
        Day8.cpp
        Day8.h
        Day9.cpp
        Day9.h)
